--- a/Keys/src/UserInterface/Consultant/ManageAppointment.form
+++ b/Keys/src/UserInterface/Consultant/ManageAppointment.form
@@ -162,7 +162,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Suggestions"/>
+            <Property name="text" type="java.lang.String" value="Suggest Houses"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="prescribeActionPerformed"/>
