--- a/Keys/src/UserInterface/User/BuilderResponseJPanel.form
+++ b/Keys/src/UserInterface/User/BuilderResponseJPanel.form
@@ -66,12 +66,9 @@
           </Constraints>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-          <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jScrollPane1MouseClicked"/>
-          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="70" y="130" width="970" height="400"/>
+              <AbsoluteConstraints x="10" y="130" width="1110" height="400"/>
             </Constraint>
           </Constraints>
 
@@ -84,8 +81,8 @@
                     <Column editable="true" title="ID" type="java.lang.Object"/>
                     <Column editable="true" title="AptNo" type="java.lang.Object"/>
                     <Column editable="true" title="Address" type="java.lang.Object"/>
-                    <Column editable="true" title="NoOfBeds" type="java.lang.Object"/>
-                    <Column editable="true" title="NoOfBaths" type="java.lang.Object"/>
+                    <Column editable="true" title="Beds" type="java.lang.Object"/>
+                    <Column editable="true" title="Baths" type="java.lang.Object"/>
                     <Column editable="true" title="Rent" type="java.lang.Object"/>
                     <Column editable="true" title="Builder" type="java.lang.Object"/>
                     <Column editable="true" title="Status" type="java.lang.Object"/>
@@ -145,7 +142,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="collectOrder">
+        <Component class="javax.swing.JButton" name="confirmMoveIn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="33" red="33" type="rgb"/>
@@ -156,10 +153,10 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Acccept"/>
+            <Property name="text" type="java.lang.String" value="Confirm Move-In"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="collectOrderActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="confirmMoveInActionPerformed"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
