--- a/Keys/src/UserInterface/UserRegister.form
+++ b/Keys/src/UserInterface/UserRegister.form
@@ -206,6 +206,9 @@
               <Color blue="f9" green="f8" red="f8" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="emailTextFieldActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="99" y="438" width="271" height="48"/>
